index.html updated from https://stackedit.io/

--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
 
 <body class="stackedit">
   <div class="stackedit__html"><h1 id="igcse-computer-science-notes">IGCSE Computer Science Notes</h1>
-<h2 id="welcome">Welcome</h2>
-<p>This is a comprehensive list of computer science notes for the IGCSE Computer Science exam in May/June 2019.</p>
-<p>I will not be covering the first chapter named “Binary systems and hexadecimal”, as most of it is simple calculations. I have covered “Uses of hexadecimal”, though. I will also not be covering Chapter 3: “Logic gates and logic circuits”, as it just teaches skills that you have hopefully picked up already.</p>
-<p>If you do require notes or help in these omitted chapters, please reach out to me.</p>
-<p>I hope they’re useful study notes to just look at or revise from. Cross-checked with multiple sources.</p>
+<p>Please reach out to <a href="mailto:nvishnu@tisb.ac.in">nvishnu@tisb.ac.in</a> for rectifications, love, or existential crises.</p>
+<p>See below for notes and info regarding them.</p>
 <h2 id="notes">Notes</h2>
 <h3 id="theory">Theory</h3>
 <ul>
+<li>Uses of hexadecimal</li>
 <li>Communication and internet technologies</li>
 <li>Operating systems and computer architecture</li>
 <li>Input and output devices</li>
@@ -30,8 +28,14 @@
 <li>Practical problem-solving and programming</li>
 <li>Pre-release solution</li>
 </ul>
+<h2 id="a-small-note-on-the-notes">A small note on the notes</h2>
+<p>This is a comprehensive list of computer science notes for the IGCSE Computer Science exam in May/June 2019.</p>
+<p>I will not be covering the first chapter named “Binary systems and hexadecimal”, as most of it is simple calculations. I have covered “Uses of hexadecimal”, though.</p>
+<p>I will also not be covering Chapter 3: “Logic gates and logic circuits”, as it just teaches skills that you have hopefully picked up already.</p>
+<p>I have also left out the redundant parts of the last section about practical problem-solving and programming, condensing all the content into one chapter.</p>
+<p>If you do require notes or help in these omitted chapters, please reach out to me.</p>
+<p>I hope they’re useful study notes to just look at or revise from. Cross-checked with multiple sources.</p>
 <hr>
-<p>Please reach out to <a href="mailto:nvishnu@tisb.ac.in">nvishnu@tisb.ac.in</a> for rectifications, love, or existential crises.</p>
 </div>
 </body>
 
