--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 <h2 id="notes">Notes</h2>
 <h3 id="theory">Theory</h3>
 <ul>
-<li>Uses of hexadecimal</li>
-<li>Communication and internet technologies</li>
-<li>Operating systems and computer architecture</li>
-<li>Input and output devices</li>
-<li>Memory and data storage</li>
-<li>Programming Languages</li>
-<li>Security and Ethics</li>
-</ul>
+  <li><a href = "ch1.html">Uses of hexadecimal</a></li>
+<li><a href = "ch2.html">Communication and internet technologies</li>
+<li><a href = "ch4.html">Operating systems and computer architecture</li>
+<li><a href = "ch5.html">Input and output devices</li>
+<li<a href = "ch6.html">>Memory and data storage</li>
+<li><a href = "ch7.html">Programming Languages</li>
+<li><a href = "ch8.html">Security and Ethics</li>
+    </ul>
 <h3 id="practical">Practical</h3>
 <ul>
 <li>Practical problem-solving and programming</li>
