--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 <h3 id="theory">Theory</h3>
 <ul>
   <li><a href = "ch1.html">Uses of hexadecimal</a></li>
-<li><a href = "ch2.html">Communication and internet technologies</li>
-<li><a href = "ch4.html">Operating systems and computer architecture</li>
-<li><a href = "ch5.html">Input and output devices</li>
-<li<a href = "ch6.html">>Memory and data storage</li>
-<li><a href = "ch7.html">Programming Languages</li>
-<li><a href = "ch8.html">Security and Ethics</li>
+<li><a href = "ch2.html">Communication and internet technologies</a></li>
+<li><a href = "ch4.html">Operating systems and computer architecture</a></li>
+<li><a href = "ch5.html">Input and output devices</a></li>
+<li><a href = "ch6.html">Memory and data storage</a></li>
+<li><a href = "ch7.html">Programming Languages</a></li>
+<li><a href = "ch8.html">Security and Ethics</a></li>
     </ul>
 <h3 id="practical">Practical</h3>
 <ul>
