ch5.html updated from https://stackedit.io/

--- a/ch5.html
+++ b/ch5.html
@@ -147,19 +147,6 @@
 <li>Creates electric fields between the glass plates.</li>
 <li>Electric field changes when touched.</li>
 <li>Coordinates determined by microprocessor.</li>
-<li>Benefits.
-<ul>
-<li>Medium cost.</li>
-<li>Good screen visibility in sunlight.</li>
-<li>Allows multi-touch.</li>
-<li>Very durable screen.</li>
-</ul>
-</li>
-<li>Drawbacks.
-<ul>
-<li>Allows only usage of fingers or a special stylus.</li>
-</ul>
-</li>
 </ul>
 </li>
 <li>Infra-red.
@@ -177,20 +164,6 @@
 <li>When touched, light is blocked &amp; X-Y coordinates determined by microprocessor.</li>
 </ul>
 </li>
-<li>Benefits.
-<ul>
-<li>Both allow multi-touch.</li>
-<li>Optical also allows for gloved fingers &amp; styluses.</li>
-<li>Both have good screen durability.</li>
-</ul>
-</li>
-<li>Drawbacks.
-<ul>
-<li>Relatively expensive.</li>
-<li>Heat-sensitive only allows for fingers.</li>
-<li>Both have fairly good screen visibility in sunlight.</li>
-</ul>
-</li>
 </ul>
 </li>
 <li>Resistive.
@@ -199,23 +172,37 @@
 <li>Bottom layer glass.</li>
 <li>Completes a circuit when touched.</li>
 <li>Signals are sent, which the microprocessor interprets &amp; the coordinates are determined.</li>
-<li>Benefits.
-<ul>
-<li>Relatively inexpensive.</li>
-<li>Allows for gloved fingers &amp; styluses.</li>
-</ul>
-</li>
-<li>Drawbacks.
-<ul>
-<li>Poor screen visibility in strong sunlight.</li>
-<li>No multi-touch.</li>
-<li>Fair screen durability.</li>
 </ul>
 </li>
 </ul>
-</li>
-</ul>
-<h2 id="sensors">Sensors</h2>
+<hr>
+
+<table>
+<thead>
+<tr>
+<th>Touchscreen Type</th>
+<th>Benefits</th>
+<th>Drawbacks</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Capacitive</td>
+<td>Medium cost. Good screen visibility in sunlight. Allows multi-touch. Very durable screen.</td>
+<td>Allows only usage of fingers or a special stylus.</td>
+</tr>
+<tr>
+<td>Resistive</td>
+<td>Relatively inexpensive. Allows for gloved fingers &amp; styluses.</td>
+<td>Poor screen visibility in strong sunlight. No multi-touch. Fair screen durability.</td>
+</tr>
+<tr>
+<td>Infrared</td>
+<td>Both allow multi-touch. Optical also allows for gloved fingers &amp; styluses. Both have good screen durability.</td>
+<td>Relatively expensive. Heat-sensitive only allows for fingers. Both have fairly good screen visibility in sunlight.</td>
+</tr>
+</tbody>
+</table><h2 id="sensors">Sensors</h2>
 <ul>
 <li>Read/Measure data.</li>
 <li>Real data is Analogue (constantly changing).</li>
