--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     </ul>
 <h3 id="practical">Practical</h3>
 <ul>
-<li>Practical problem-solving and programming</li>
-<li>Pre-release solution</li>
+  <li><a href = "sec2.html">Practical problem-solving and programming</a></li>
+  <li><a href = "pre-release.html">Pre-release solution</a></li>
 </ul>
 <h2 id="a-small-note-on-the-notes">A small note on the notes</h2>
 <p>This is a comprehensive list of computer science notes for the IGCSE Computer Science exam in May/June 2019.</p>
